--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -21,7 +21,8 @@
   background-size: 100% 100%;
 }
 .card_img {
-  height: 100%;
+  width: 100%;
+  max-height: 180px;
   transform: translateX(-50%);
   position: relative;
   left: 50%;
